[gd_scene load_steps=2 format=3 uid="uid://unlock_notification_scene"]

[ext_resource type="Script" path="res://scripts/ui/unlock_notification.gd" id="1"]

[node name="UnlockNotification" type="CanvasLayer"]
layer = 15
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="MessageLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Character Unlocked!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Character Name"
horizontal_alignment = 1
vertical_alignment = 1
